@@ -1,3 +1,10 @@
+2002-06-10  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* unix/tclUnixFCmd.c: fixed [Bug #566669]
+	* generic/tclIOUtil.c: improved and sped up handling of
+	native paths (duplication and conversion to normalized paths),
+	particularly on Windows.
+
 2002-06-07  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/tcltest.test:  More corrections to test suite so that tests
